--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ip-subnet-visual-calculator",
+  "name": "ip-subnet-visualizer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
